#add_executable(thread_test Thread_test.cpp)
#target_link_libraries(thread_test common pthread)

#add_executable(threadpool_test ThreadPool_test.cpp)
#target_link_libraries(threadpool_test common pthread)

#add_executable(uricodec_test UriCodec_test.cpp)
#target_link_libraries(uricodec_test pthread)

#add_executable(timestamp_test Timestamp_test.cpp)
#target_link_libraries(timestamp_test common pthread)

#add_executable(base64_test Base64_test.cpp)
#target_link_libraries(base64_test common pthread)
